--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-csv-uploader",
   "version": "0.1.0",
-  "author": "Mashuk Sadman",
+  "author": "Amit kumar",
   "homepage": "https://halumz.github.io/react-csv-uploader",
   "private": true,
   "repository": {
